# back-api-rest/src/main/java/com/feyconsuelo/apirest/converter/user/UserGroupByRoleResponseToUserGroupByRoleResponseDtoConverter.java
@@ -1,6 +1,7 @@
 package com.feyconsuelo.apirest.converter.user;
 
 import com.feyconsuelo.domain.model.user.UserGroupByRoleResponse;
+import com.feyconsuelo.domain.model.user.UserRoleEnum;
 import com.feyconsuelo.openapi.model.UserGroupByRoleResponseDto;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -13,9 +14,19 @@ public class UserGroupByRoleResponseToUserGroupByRoleResponseDtoConverter {
 
     private final UserMusicianResponseListToUserResponseDtoListConverter musicianGroupByVoiceListResponseToMusicianGroupByVoiceListResponseDtoConverter;
 
+    private String getRoleName(final String role) {
+        try {
+            return UserRoleEnum.of(role).getRoleName();
+        } catch (final Exception e) {
+            log.error("Error getting role name", e);
+            return role;
+        }
+    }
+
     public UserGroupByRoleResponseDto convert(final UserGroupByRoleResponse userGroupByRoleResponse) {
         return UserGroupByRoleResponseDto.builder()
                 .role(userGroupByRoleResponse.getRole())
+                .roleName(this.getRoleName(userGroupByRoleResponse.getRole()))
                 .users(this.musicianGroupByVoiceListResponseToMusicianGroupByVoiceListResponseDtoConverter.convert(userGroupByRoleResponse.getUsers()))
                 .build();
     }
