# back-domain/src/main/java/com/feyconsuelo/domain/model/user/UserRoleEnum.java
@@ -8,18 +8,22 @@ import lombok.Getter;
 @Getter
 public enum UserRoleEnum {
 
-    SUPER_ADMIN("Rol super administrador"),
-    ADMIN("Rol administrador"),
-    MUSICO("Rol para los musicos"),
-    INVITADO("Rol para usuario invitado");
+    SUPER_ADMIN("Rol super administrador", "Super Administrador", 1),
+    ADMIN("Rol administrador", "Administrador", 2),
+    MUSICO("Rol para los musicos", "Musico", 3),
+    INVITADO("Rol para usuario invitado", "Invitado", 4);
 
     private static final UserRoleEnum defaultValue = MUSICO;
     private final String id;
     private final String description;
+    private final String roleName;
+    private final Integer order;
 
-    UserRoleEnum(final String description) {
+    UserRoleEnum(final String description, final String roleName, final Integer order) {
         this.id = this.name();
         this.description = description;
+        this.roleName = roleName;
+        this.order = order;
     }
 
     public static UserRoleEnum of(final String id) {
